content style correction, unwrap wysiwyg_congig definition to do it available in outer CKEditor starting code

--- a/media/ckeditor/contents.css
+++ b/media/ckeditor/contents.css
@@ -25,7 +25,7 @@ dl
 }
 
 img {
-  margin: 0 0 15px 15px;
+  margin: 15px 0;
 }
 
 table {
